# TradingAgent

./: .env.example  .gitignore  README.md  ROADMAP.md  config.yaml  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
src/: __init__.py  agent.py  backtest.py  broker.py  config.py  data.py  execution.py  fetch.py  indicators.py  log.py  risk.py  scheduler.py  store.py  strategy.py  sweep.py  xsec.py
tests/: test_backtest.py  test_indicators.py  test_risk.py  test_strategy.py  test_sweep.py  test_xsec.py
tests/fixtures/cache/: AAA.csv  BBB.csv  BENCH.csv  CCC.csv  DDD.csv
