[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-trading-agent"
version = "0.1.0"
description = "Autonomous, paper-first IBKR trading agent (trend regime + RSI mean-reversion + ATR/trend exits)"
requires-python = ">=3.11"
dependencies = [
    "ib_async>=1.0.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "APScheduler>=3.10",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
trading-agent = "src.agent:main"
